--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "linebreak-style": "off",
     "no-restricted-syntax": ["off"],
     "no-await-in-loop": "off",
-    "import/no-unresolved": 0
+    "import/no-unresolved": 0,
+    "arrow-parens": [2, "as-needed", { "requireForBlockBody": true }]
   }
 }
