--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
-    "node-fetch": "^2.6.1"
+    "warframe-worldstate-data": "^1.11.6"
   },
   "nodemon": {},
   "devDependencies": {
